# class-table

./: .gitattributes  .prettierignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
docs/: settings.schema.json
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: PillCard.tsx  Time.tsx  TimeBlock.tsx
src/components/CsesBlock/: index.tsx  type.d.ts
src/components/scheduleBlock/: Completed.tsx  Ongoing.tsx  Upcoming.tsx  index.tsx
src/components/weatherBlock/: Xiaomi.tsx
src/styles/: Bar.css  Settings.css
src/utils/: cses.ts  func.ts  settings.ts  time.ts  weather.ts
src/views/: Bar.tsx  Settings.tsx
